feat: :sparkles: Working lambda function ready to deploy

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,5 +9,14 @@ provider:
   runtime: nodejs14.x
 
 functions:
-  hello:
-    handler: handler.hello
+  app-api:
+    handler: handler.handler
+    events:
+      - http:
+          path: /
+          method: get
+          cors: true
+      - http:
+          path: /{proxy}
+          method: any
+          cors: true
